[package]
name = "postcode"
version = "0.1.1"
edition = "2018"
license = "GPL-3.0"
authors = ["Grant Handy <grantshandy@gmail.com"]
repository = "https://github.com/grantshandy/postcode-rs"
documentation = "https://docs.rs/postcode"
keywords = ["uk", "united", "kingdom", "code", "post"]
description = "Postcode & Geolocation API for the UK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.2.0"
thiserror = "1.0.25"
serde_json = "1.0.64"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }